Issue #56 implement the ability to prevent truncation of long strings. Modify table cell wrap behavior for text strings to follow a more natural word wrap behavior you'd expect in a table; however, maintain the no-wrap behavior when choosing to display as a Numeric value which still allows for displaying text data, but with no wrapping at all (normal for numbers, but we still allow textual data to display here)

--- a/assets/css/widget.css
+++ b/assets/css/widget.css
@@ -921,6 +921,11 @@ div.dashboard-widget-tablemodulerme td.rme-cell:focus-visible {
   outline-offset: -2px;
 }
 
+.zbx-wrap-rme {
+  white-space: normal;
+  word-break: break-word;
+}
+
 /* ========== Theme Variables ========== */
 
 [theme="blue-theme"],
